Settings Modal: Source Row: Fix long sub title to break the layout

--- a/src/public/styles/_settings_modal.scss
+++ b/src/public/styles/_settings_modal.scss
@@ -77,6 +77,14 @@
                 opacity: 0.5;
             }
         }
+
+        .source-row__sub-title {
+            @extend em;
+
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
     }
 }
 
